[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.50.0",
    "mcp>=1.6.0",
    "openai>=1.76.2",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1",
    "pyrate-limiter>=2.10.0",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "tabulate>=0.9.0",
    "yfinance[nospam]>=0.2.54",
    "playwright>=1.52.0",
    "fastapi>=0.115.13",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.6.6",
]
